--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu">
+      <div class="mobile-menu is-open">
         <div class="container mobile-menu-container">
           <button class="close-btn" type="button">
             <svg class="icon-close" width="8" height="8">
