--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
             </li>
           </ul>
         </address>
-        <button class="header-menu" type="button">
+        <button class="header-menu" type="button" data-menu-open>
           <svg class="icon-menu" width="24" height="24">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
-      <div class="mobile-menu">
+      <div class="mobile-menu" data-menu>
         <div class="container mobile-menu-container">
-          <button class="close-btn" type="button">
+          <button class="close-btn" type="button" data-menu-close>
             <svg class="icon-close" width="8" height="8">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
